--- a/COURSE 2 Improving Deep Neural Networks Hyperparameter tuning, Regularization and Optimization/week 01/Gradient Checking/Gradient Checking.ipynb
+++ b/COURSE 2 Improving Deep Neural Networks Hyperparameter tuning, Regularization and Optimization/week 01/Gradient Checking/Gradient Checking.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true,
     "scrolled": true
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true,
     "scrolled": true
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true
    },
@@ -438,13 +438,15 @@
     "    \n",
     "    dA2 = np.dot(W3.T, dZ3)\n",
     "    dZ2 = np.multiply(dA2, np.int64(A2 > 0))\n",
-    "    dW2 = 1./m * np.dot(dZ2, A1.T) * 2\n",
+    "    dW2 = 1./m * np.dot(dZ2, A1.T) \n",
+    "    # dW2 = 1./m * np.dot(dZ2, A1.T) * 2\n",
     "    db2 = 1./m * np.sum(dZ2, axis=1, keepdims = True)\n",
     "    \n",
     "    dA1 = np.dot(W2.T, dZ2)\n",
     "    dZ1 = np.multiply(dA1, np.int64(A1 > 0))\n",
     "    dW1 = 1./m * np.dot(dZ1, X.T)\n",
-    "    db1 = 4./m * np.sum(dZ1, axis=1, keepdims = True)\n",
+    "    db1 = 1./m * np.sum(dZ1, axis=1, keepdims = True)\n",
+    "    # db1 = 4./m * np.sum(dZ1, axis=1, keepdims = True)\n",
     "    \n",
     "    gradients = {\"dZ3\": dZ3, \"dW3\": dW3, \"db3\": db3,\n",
     "                 \"dA2\": dA2, \"dZ2\": dZ2, \"dW2\": dW2, \"db2\": db2,\n",
@@ -476,7 +478,7 @@
     "\n",
     "The inverse function is \"`vector_to_dictionary`\" which outputs back the \"parameters\" dictionary.\n",
     "\n",
-    "<img src=\"images/dictionary_to_vector.png\" style=\"width:600px;height:400px;\">\n",
+    "<img src=\"images/dictionary_to_vector.png\" style=\"width:1200px;height:800px;\">\n",
     "<caption><center> <u> **Figure 2** </u>: **dictionary_to_vector() and vector_to_dictionary()**<br> You will need these functions in gradient_check_n()</center></caption>\n",
     "\n",
     "We have also converted the \"gradients\" dictionary into a vector \"grad\" using gradients_to_vector(). You don't need to worry about that.\n",
@@ -499,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "collapsed": true
    },
@@ -507,7 +509,8 @@
    "source": [
     "# GRADED FUNCTION: gradient_check_n\n",
     "\n",
-    "def gradient_check_n(parameters, gradients, X, Y, epsilon = 1e-7):\n",
+    "\n",
+    "def gradient_check_n(parameters, gradients, X, Y, epsilon=1e-7):\n",
     "    \"\"\"\n",
     "    Checks if backward_propagation_n computes correctly the gradient of the cost output by forward_propagation_n\n",
     "    \n",
@@ -521,7 +524,7 @@
     "    Returns:\n",
     "    difference -- difference (2) between the approximated gradient and the backward propagation gradient\n",
     "    \"\"\"\n",
-    "    \n",
+    "\n",
     "    # Set-up variables\n",
     "    parameters_values, _ = dictionary_to_vector(parameters)\n",
     "    grad = gradients_to_vector(gradients)\n",
@@ -529,53 +532,67 @@
     "    J_plus = np.zeros((num_parameters, 1))\n",
     "    J_minus = np.zeros((num_parameters, 1))\n",
     "    gradapprox = np.zeros((num_parameters, 1))\n",
-    "    \n",
+    "\n",
     "    # Compute gradapprox\n",
     "    for i in range(num_parameters):\n",
-    "        \n",
+    "\n",
     "        # Compute J_plus[i]. Inputs: \"parameters_values, epsilon\". Output = \"J_plus[i]\".\n",
     "        # \"_\" is used because the function you have to outputs two parameters but we only care about the first one\n",
     "        ### START CODE HERE ### (approx. 3 lines)\n",
-    "        thetaplus =                                       # Step 1\n",
-    "        thetaplus[i][0] =                                 # Step 2\n",
-    "        J_plus[i], _ =                                    # Step 3\n",
+    "        thetaplus = np.copy(parameters_values)  # Step 1\n",
+    "        thetaplus[i][0] = thetaplus[i][0] + epsilon  # Step 2\n",
+    "        J_plus[i], _ = forward_propagation_n(X, Y,\n",
+    "                                             vector_to_dictionary(thetaplus))\n",
     "        ### END CODE HERE ###\n",
-    "        \n",
+    "\n",
     "        # Compute J_minus[i]. Inputs: \"parameters_values, epsilon\". Output = \"J_minus[i]\".\n",
     "        ### START CODE HERE ### (approx. 3 lines)\n",
-    "        thetaminus =                                      # Step 1\n",
-    "        thetaminus[i][0] =                                # Step 2        \n",
-    "        J_minus[i], _ =                                   # Step 3\n",
+    "        thetaminus = np.copy(parameters_values)  # Step 1\n",
+    "        thetaminus[i][0] = thetaminus[i][0] - epsilon  # Step 2\n",
+    "        J_minus[i], _ = forward_propagation_n(X, Y,\n",
+    "                                              vector_to_dictionary(thetaminus))\n",
     "        ### END CODE HERE ###\n",
-    "        \n",
+    "\n",
     "        # Compute gradapprox[i]\n",
     "        ### START CODE HERE ### (approx. 1 line)\n",
-    "        gradapprox[i] = \n",
+    "        gradapprox[i] = (J_plus[i] - J_minus[i]) / (2 * epsilon)\n",
     "        ### END CODE HERE ###\n",
-    "    \n",
+    "\n",
     "    # Compare gradapprox to backward propagation gradients by computing difference.\n",
     "    ### START CODE HERE ### (approx. 1 line)\n",
-    "    numerator =                                            # Step 1'\n",
-    "    denominator =                                          # Step 2'\n",
-    "    difference =                                           # Step 3'\n",
+    "    numerator = np.linalg.norm(grad - gradapprox)  # Step 1'\n",
+    "    denominator = np.linalg.norm(grad) + np.linalg.norm(gradapprox)  # Step 2'\n",
+    "    difference = numerator / denominator  # Step 3'\n",
     "    ### END CODE HERE ###\n",
     "\n",
-    "    if difference > 1e-7:\n",
-    "        print (\"\\033[93m\" + \"There is a mistake in the backward propagation! difference = \" + str(difference) + \"\\033[0m\")\n",
+    "    if difference > 1.2e-7:\n",
+    "        print(\"\\033[93m\" +\n",
+    "              \"There is a mistake in the backward propagation! difference = \" +\n",
+    "              str(difference) + \"\\033[0m\")\n",
     "    else:\n",
-    "        print (\"\\033[92m\" + \"Your backward propagation works perfectly fine! difference = \" + str(difference) + \"\\033[0m\")\n",
-    "    \n",
+    "        print(\"\\033[92m\" +\n",
+    "              \"Your backward propagation works perfectly fine! difference = \" +\n",
+    "              str(difference) + \"\\033[0m\")\n",
+    "\n",
     "    return difference"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "collapsed": true,
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92mYour backward propagation works perfectly fine! difference = 1.1890913024229996e-07\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "X, Y, parameters = gradient_check_n_test_case()\n",
     "\n",
